log

Wed 13 Mar 2024 08:42:50 PM UTC: 
 exercises.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
 tests:  0|7
total_score: 0/70
048055c
Wed 13 Mar 2024 08:43:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
5e78761
Wed 13 Mar 2024 08:49:57 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
5409dbc
Wed 13 Mar 2024 08:59:02 PM UTC: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:14: error: ‘count’ undeclared (first use in this function)
   52 |   *newSize = count;
      |              ^~~~~
exercises.c:52:14: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:53:3: error: ‘evenArr’ undeclared (first use in this function)
   53 |   evenArr = (int *)malloc(count * sizeof(int));
      |   ^~~~~~~
exercises.c:55:7: error: ‘i’ undeclared (first use in this function)
   55 |   for(i = 0; i < size; i++)
      |       ^
exercises.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
617ae98
Wed 13 Mar 2024 08:59:51 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:52:3: error: ‘evenArr’ undeclared (first use in this function)
   52 |   evenArr = (int *)malloc(count * sizeof(int));
      |   ^~~~~~~
exercises.c:52:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:52:27: error: ‘count’ undeclared (first use in this function)
   52 |   evenArr = (int *)malloc(count * sizeof(int));
      |                           ^~~~~
exercises.c:54:7: error: ‘i’ undeclared (first use in this function)
   54 |   for(i = 0; i < size; i++)
      |       ^
exercises.c:64:1: error: control reaches end of non-void function [-Werror=return-type]
   64 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e54b444
Wed 13 Mar 2024 09:02:11 PM UTC: 
 exercises.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
ce267f4
Wed 13 Mar 2024 09:08:12 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4ed50a7
Wed 13 Mar 2024 09:08:17 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
4ed50a7
